add english final

--- a/carta.html
+++ b/carta.html
@@ -7,24 +7,21 @@
   <meta name="description" content="Carta Restaurante Casona Belga Temporada 2025–2026. Reserva por WhatsApp." />
   <meta name="theme-color" content="#07070a" />
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="icon" href="/assets/logo_casona.png" type="image/png" />
 
-  <!-- Favicon (tu archivo es PNG, no SVG) -->
-  <link rel="icon" href="assets/logo_casona.png" type="image/png" />
-  <link rel="alternate" hreflang="es" href="https://www.casonabelga.cl/habitaciones.html" />
-  <link rel="alternate" hreflang="en" href="https://www.casonabelga.cl/en/rooms.html" />
+  <link rel="canonical" href="https://www.casonabelga.cl/carta.html" />
+  <link rel="alternate" hreflang="es" href="https://www.casonabelga.cl/carta.html" />
+  <link rel="alternate" hreflang="en" href="https://www.casonabelga.cl/en/menu.html" />
   <link rel="alternate" hreflang="x-default" href="https://www.casonabelga.cl/index.html" />
-
 </head>
 
 <body>
   <header>
     <div class="container nav">
-
-      <!-- BRAND con logo -->
       <div class="brand brand-row">
-        <a href="index.html" class="brand-link" aria-label="Casona Belga - Inicio">
-          <img src="assets/logo_casona.png" alt="Logo Casona Belga" class="logo" />
+        <a href="/index.html" class="brand-link" aria-label="Casona Belga - Inicio">
+          <img src="/assets/logo_casona.png" alt="Logo Casona Belga" class="logo" />
           <div class="brand-text">
             <strong>Casona Belga</strong>
             <span>Restaurante · Carta Temporada 2025–2026</span>
@@ -33,8 +30,12 @@
       </div>
 
       <nav class="menu">
-        <a href="habitaciones.html">Hotel</a>
-        <a href="contacto.html">Contacto</a>
+        <a href="/habitaciones.html">Hotel</a>
+        <a href="/contacto.html">Contacto</a>
+
+        <!-- Idioma -->
+        <a class="btn" href="/en/menu.html">EN</a>
+
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Reservar</a>
       </nav>
     </div>
@@ -46,7 +47,7 @@
 
     <div class="cta-row">
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🟢 Reservar mesa</a>
-      <a class="btn" href="index.html">⬅ Volver</a>
+      <a class="btn" href="/index.html">⬅ Volver</a>
     </div>
 
     <hr class="sep" />
@@ -56,44 +57,20 @@
       <div class="card">
         <h2>Entradas</h2>
         <div class="list">
-          <div class="item">
-            <div class="title">Ceviche de Salmón</div>
-            <div class="price">$ 15.500</div>
-          </div>
-          <div class="item">
-            <div class="title">Tártaro de Filete res en tostadas de masa madre</div>
-            <div class="price">$ 15.500</div>
-          </div>
-          <div class="item">
-            <div class="title">Tártaro de Betarraga con quinoa crocante</div>
-            <div class="price">$ 14.500</div>
-          </div>
-          <div class="item">
-            <div class="title">Crema de Zapallo con zanahoria y jengibre</div>
-            <div class="price">$ 9.000</div>
-          </div>
-          <div class="item">
-            <div class="title">Crema de Lentejas</div>
-            <div class="price">$ 9.000</div>
-          </div>
+          <div class="item"><div class="title">Ceviche de Salmón</div><div class="price">$ 15.500</div></div>
+          <div class="item"><div class="title">Tártaro de Filete res en tostadas de masa madre</div><div class="price">$ 15.500</div></div>
+          <div class="item"><div class="title">Tártaro de Betarraga con quinoa crocante</div><div class="price">$ 14.500</div></div>
+          <div class="item"><div class="title">Crema de Zapallo con zanahoria y jengibre</div><div class="price">$ 9.000</div></div>
+          <div class="item"><div class="title">Crema de Lentejas</div><div class="price">$ 9.000</div></div>
         </div>
       </div>
 
       <div class="card">
         <h2>Fondos + acomp. + salsa</h2>
         <div class="list">
-          <div class="item">
-            <div class="title">Medallón de Filete o Lomo vetado grillado, 220 grs</div>
-            <div class="price">$ 22.500</div>
-          </div>
-          <div class="item">
-            <div class="title">Merluza Austral a la plancha, 230 grs</div>
-            <div class="price">$ 21.500</div>
-          </div>
-          <div class="item">
-            <div class="title">Salmón a la plancha, 230 grs</div>
-            <div class="price">$ 23.500</div>
-          </div>
+          <div class="item"><div class="title">Medallón de Filete o Lomo vetado grillado, 220 grs</div><div class="price">$ 22.500</div></div>
+          <div class="item"><div class="title">Merluza Austral a la plancha, 230 grs</div><div class="price">$ 21.500</div></div>
+          <div class="item"><div class="title">Salmón a la plancha, 230 grs</div><div class="price">$ 23.500</div></div>
         </div>
 
         <hr class="sep" />
@@ -127,31 +104,26 @@
             <div class="desc">(Trigo de mote en reducción de zapallo asado acompañado de vegetales grillados)</div>
             <div class="price">$ 19.000</div>
           </div>
-
           <div class="item">
             <div class="title">Risotto de camarones</div>
             <div class="desc">(Arroz arborio reducido en caldo de crustáceos con camarones salteados al ajillo)</div>
             <div class="price">$ 19.000</div>
           </div>
-
           <div class="item">
             <div class="title">Ravioli de salmón en zeste de limón en salsa de pesto</div>
             <div class="desc">(Masa artesanal al huevo teñida con cerezas orgánicas de Chile Chico)</div>
             <div class="price">$ 17.000</div>
           </div>
-
           <div class="item">
             <div class="title">Ravioli de cordero en salsa de finas hierbas</div>
             <div class="desc">(Masa artesanal al huevo teñida con calafate orgánico de Chile Chico)</div>
             <div class="price">$ 17.000</div>
           </div>
-
           <div class="item">
             <div class="title">Sorrentino de espinaca en salsa pomodoro con morchellas</div>
             <div class="desc">(Masa artesanal al huevo teñida con betarragas orgánicas de Chile Chico)</div>
             <div class="price">$ 17.000</div>
           </div>
-
           <div class="item">
             <div class="title">Fetuccinis en salsa pomodoro y un toque de pesto de albahaca</div>
             <div class="desc">(Masa artesanal al huevo con salsa de tomate artesanal)</div>
@@ -168,88 +140,40 @@
       <div class="card">
         <h2>Jugos y bebidas</h2>
         <div class="list">
-          <div class="item">
-            <div class="title">Jugos UAPA! — Cereza / Pera / Manzana</div>
-            <div class="price">$ 4.500</div>
-          </div>
-          <div class="item">
-            <div class="title">Jugos SUR YUIS — Zarzaparrilla / Calafate / Grosella / Maqui</div>
-            <div class="price">$ 4.500</div>
-          </div>
-          <div class="item">
-            <div class="title">Jugo natural — Piña / Frambuesa / Limonada Menta Jengibre</div>
-            <div class="price">$ 4.500</div>
-          </div>
-          <div class="item">
-            <div class="title">Gaseosas</div>
-            <div class="price">$ 3.500</div>
-          </div>
+          <div class="item"><div class="title">Jugos UAPA! — Cereza / Pera / Manzana</div><div class="price">$ 4.500</div></div>
+          <div class="item"><div class="title">Jugos SUR YUIS — Zarzaparrilla / Calafate / Grosella / Maqui</div><div class="price">$ 4.500</div></div>
+          <div class="item"><div class="title">Jugo natural — Piña / Frambuesa / Limonada Menta Jengibre</div><div class="price">$ 4.500</div></div>
+          <div class="item"><div class="title">Gaseosas</div><div class="price">$ 3.500</div></div>
         </div>
       </div>
 
       <div class="card">
         <h2>Cervezas</h2>
         <div class="list">
-          <div class="item">
-            <div class="title">GLOF — Pale Ale, artesanal de Chile Chico</div>
-            <div class="price">$ 4.500</div>
-          </div>
-          <div class="item">
-            <div class="title">CERRO COLORADO — Porter / Amber Ale, artesanal Chile Chico</div>
-            <div class="price">$ 4.500</div>
-          </div>
-          <div class="item">
-            <div class="title">D'Olbeck — Maqui / Lager / Ale / Red Ipa / Stout sin filtrar</div>
-            <div class="price">$ 4.500</div>
-          </div>
-          <div class="item">
-            <div class="title">KUNSTMANN — Sin Alcohol Lager</div>
-            <div class="price">$ 4.500</div>
-          </div>
+          <div class="item"><div class="title">GLOF — Pale Ale, artesanal de Chile Chico</div><div class="price">$ 4.500</div></div>
+          <div class="item"><div class="title">CERRO COLORADO — Porter / Amber Ale, artesanal Chile Chico</div><div class="price">$ 4.500</div></div>
+          <div class="item"><div class="title">D'Olbeck — Maqui / Lager / Ale / Red Ipa / Stout sin filtrar</div><div class="price">$ 4.500</div></div>
+          <div class="item"><div class="title">KUNSTMANN — Sin Alcohol Lager</div><div class="price">$ 4.500</div></div>
         </div>
       </div>
 
       <div class="card">
         <h2>Cocktails</h2>
         <div class="list">
-          <div class="item">
-            <div class="title">Pisco Sour Limón, Calafate o Corinto</div>
-            <div class="price">$ 7.000</div>
-          </div>
-          <div class="item">
-            <div class="title">Spritz — St. Germain, Ramazzotti, Aperol, Chambord</div>
-            <div class="price">$ 7.000</div>
-          </div>
-          <div class="item">
-            <div class="title">Espumante Brut</div>
-            <div class="price">$ 5.500</div>
-          </div>
-          <div class="item">
-            <div class="title">Jagermeister Manifest — vaso corporativo</div>
-            <div class="price">$ 4.500</div>
-          </div>
-          <div class="item">
-            <div class="title">Gin Kantal</div>
-            <div class="price">$ 5.000</div>
-          </div>
-          <div class="item">
-            <div class="title">Fentimans Rose o Ginger</div>
-            <div class="price">$ 4.000</div>
-          </div>
-          <div class="item">
-            <div class="title">Whisky Chivas 12 años</div>
-            <div class="price">$ 12.000</div>
-          </div>
+          <div class="item"><div class="title">Pisco Sour Limón, Calafate o Corinto</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">Spritz — St. Germain, Ramazzotti, Aperol, Chambord</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">Espumante Brut</div><div class="price">$ 5.500</div></div>
+          <div class="item"><div class="title">Jagermeister Manifest — vaso corporativo</div><div class="price">$ 4.500</div></div>
+          <div class="item"><div class="title">Gin Kantal</div><div class="price">$ 5.000</div></div>
+          <div class="item"><div class="title">Fentimans Rose o Ginger</div><div class="price">$ 4.000</div></div>
+          <div class="item"><div class="title">Whisky Chivas 12 años</div><div class="price">$ 12.000</div></div>
         </div>
 
         <hr class="sep" />
 
         <h2>Vinos</h2>
         <div class="list">
-          <div class="item">
-            <div class="title">Allá Lejos (Chile Chico) — el vino más austral del mundo</div>
-            <div class="price">$ 45.000</div>
-          </div>
+          <div class="item"><div class="title">Allá Lejos (Chile Chico) — el vino más austral del mundo</div><div class="price">$ 45.000</div></div>
         </div>
       </div>
     </div>
@@ -259,26 +183,11 @@
       <div class="card">
         <h2>Postres</h2>
         <div class="list">
-          <div class="item">
-            <div class="title">Brownie con toque de helado</div>
-            <div class="price">$ 7.000</div>
-          </div>
-          <div class="item">
-            <div class="title">Crumble de manzana con helado de la casa</div>
-            <div class="price">$ 7.000</div>
-          </div>
-          <div class="item">
-            <div class="title">Crema catalana</div>
-            <div class="price">$ 7.000</div>
-          </div>
-          <div class="item">
-            <div class="title">Tiramisú</div>
-            <div class="price">$ 7.000</div>
-          </div>
-          <div class="item">
-            <div class="title">Torta de la casa</div>
-            <div class="price">$ 7.000</div>
-          </div>
+          <div class="item"><div class="title">Brownie con toque de helado</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">Crumble de manzana con helado de la casa</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">Crema catalana</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">Tiramisú</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">Torta de la casa</div><div class="price">$ 7.000</div></div>
         </div>
       </div>
     </div>
