--- a/contacto.html
+++ b/contacto.html
@@ -7,23 +7,21 @@
   <meta name="description" content="Contacto, ubicación, horarios y WhatsApp directo." />
   <meta name="theme-color" content="#07070a" />
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="icon" href="/assets/logo_casona.png" type="image/png" />
 
-  <!-- OJO: tu logo es PNG, así que cámbialo a image/png -->
-  <link rel="icon" href="assets/logo_casona.png" type="image/png" />
-  <link rel="alternate" hreflang="es" href="https://www.casonabelga.cl/habitaciones.html" />
-  <link rel="alternate" hreflang="en" href="https://www.casonabelga.cl/en/rooms.html" />
+  <link rel="canonical" href="https://www.casonabelga.cl/contacto.html" />
+  <link rel="alternate" hreflang="es" href="https://www.casonabelga.cl/contacto.html" />
+  <link rel="alternate" hreflang="en" href="https://www.casonabelga.cl/en/contact.html" />
   <link rel="alternate" hreflang="x-default" href="https://www.casonabelga.cl/index.html" />
-
 </head>
 
 <body>
   <header>
     <div class="container nav">
-      <!-- Brand con logo -->
       <div class="brand brand-row">
-        <a href="index.html" class="brand-link" aria-label="Casona Belga - Inicio">
-          <img src="assets/logo_casona.png" alt="Logo Casona Belga" class="logo" />
+        <a href="/index.html" class="brand-link" aria-label="Casona Belga - Inicio">
+          <img src="/assets/logo_casona.png" alt="Logo Casona Belga" class="logo" />
           <div class="brand-text">
             <strong>Casona Belga</strong>
             <span>Contacto</span>
@@ -32,8 +30,12 @@
       </div>
 
       <nav class="menu">
-        <a href="carta.html">Restaurante</a>
-        <a href="habitaciones.html">Hotel</a>
+        <a href="/carta.html">Restaurante</a>
+        <a href="/habitaciones.html">Hotel</a>
+
+        <!-- Idioma -->
+        <a class="btn" href="/en/contact.html">EN</a>
+
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">WhatsApp</a>
       </nav>
     </div>
