--- a/en/contact.html
+++ b/en/contact.html
@@ -7,21 +7,21 @@
   <meta name="description" content="Contact, location, opening hours, and direct WhatsApp." />
   <meta name="theme-color" content="#07070a" />
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="icon" href="/assets/logo_casona.png" type="image/png" />
 
-  <link rel="icon" href="assets/logo_casona.png" type="image/png" />
-  <link rel="alternate" hreflang="en" href="https://www.casonabelga.cl/en/rooms.html" />
-  <link rel="alternate" hreflang="es" href="https://www.casonabelga.cl/habitaciones.html" />
+  <link rel="canonical" href="https://www.casonabelga.cl/en/contact.html" />
+  <link rel="alternate" hreflang="en" href="https://www.casonabelga.cl/en/contact.html" />
+  <link rel="alternate" hreflang="es" href="https://www.casonabelga.cl/contacto.html" />
   <link rel="alternate" hreflang="x-default" href="https://www.casonabelga.cl/index.html" />
 </head>
 
 <body>
   <header>
     <div class="container nav">
-      <!-- Brand with logo -->
       <div class="brand brand-row">
-        <a href="index.html" class="brand-link" aria-label="Casona Belga - Home">
-          <img src="assets/logo_casona.png" alt="Casona Belga logo" class="logo" />
+        <a href="/en/index.html" class="brand-link" aria-label="Casona Belga - Home">
+          <img src="/assets/logo_casona.png" alt="Casona Belga logo" class="logo" />
           <div class="brand-text">
             <strong>Casona Belga</strong>
             <span>Contact</span>
@@ -30,8 +30,12 @@
       </div>
 
       <nav class="menu">
-        <a href="carta.html">Restaurant</a>
-        <a href="habitaciones.html">Hotel</a>
+        <a href="/en/menu.html">Restaurant</a>
+        <a href="/en/rooms.html">Rooms</a>
+
+        <!-- Language -->
+        <a class="btn" href="/contacto.html">ES</a>
+
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">WhatsApp</a>
       </nav>
     </div>
