--- a/en/menu.html
+++ b/en/menu.html
@@ -7,23 +7,21 @@
   <meta name="description" content="Casona Belga Restaurant Menu 2025–2026 season. Book via WhatsApp." />
   <meta name="theme-color" content="#07070a" />
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="icon" href="/assets/logo_casona.png" type="image/png" />
 
-  <!-- Favicon (your file is PNG, not SVG) -->
-  <link rel="icon" href="assets/logo_casona.png" type="image/png" />
-  <link rel="alternate" hreflang="en" href="https://www.casonabelga.cl/en/rooms.html" />
-  <link rel="alternate" hreflang="es" href="https://www.casonabelga.cl/habitaciones.html" />
+  <link rel="canonical" href="https://www.casonabelga.cl/en/menu.html" />
+  <link rel="alternate" hreflang="en" href="https://www.casonabelga.cl/en/menu.html" />
+  <link rel="alternate" hreflang="es" href="https://www.casonabelga.cl/carta.html" />
   <link rel="alternate" hreflang="x-default" href="https://www.casonabelga.cl/index.html" />
 </head>
 
 <body>
   <header>
     <div class="container nav">
-
-      <!-- BRAND with logo -->
       <div class="brand brand-row">
-        <a href="index.html" class="brand-link" aria-label="Casona Belga - Home">
-          <img src="assets/logo_casona.png" alt="Casona Belga logo" class="logo" />
+        <a href="/en/index.html" class="brand-link" aria-label="Casona Belga - Home">
+          <img src="/assets/logo_casona.png" alt="Casona Belga logo" class="logo" />
           <div class="brand-text">
             <strong>Casona Belga</strong>
             <span>Restaurant · 2025–2026 Season Menu</span>
@@ -32,8 +30,12 @@
       </div>
 
       <nav class="menu">
-        <a href="habitaciones.html">Hotel</a>
-        <a href="contacto.html">Contact</a>
+        <a href="/en/rooms.html">Rooms</a>
+        <a href="/en/contact.html">Contact</a>
+
+        <!-- Language -->
+        <a class="btn" href="/carta.html">ES</a>
+
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Book</a>
       </nav>
     </div>
@@ -45,7 +47,7 @@
 
     <div class="cta-row">
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🟢 Book a table</a>
-      <a class="btn" href="index.html">⬅ Back</a>
+      <a class="btn" href="/en/index.html">⬅ Back</a>
     </div>
 
     <hr class="sep" />
@@ -55,44 +57,20 @@
       <div class="card">
         <h2>Starters</h2>
         <div class="list">
-          <div class="item">
-            <div class="title">Salmon ceviche</div>
-            <div class="price">$ 15.500</div>
-          </div>
-          <div class="item">
-            <div class="title">Beef filet tartare on sourdough toasts</div>
-            <div class="price">$ 15.500</div>
-          </div>
-          <div class="item">
-            <div class="title">Beet tartare with crispy quinoa</div>
-            <div class="price">$ 14.500</div>
-          </div>
-          <div class="item">
-            <div class="title">Pumpkin cream soup with carrot and ginger</div>
-            <div class="price">$ 9.000</div>
-          </div>
-          <div class="item">
-            <div class="title">Lentil cream soup</div>
-            <div class="price">$ 9.000</div>
-          </div>
+          <div class="item"><div class="title">Salmon ceviche</div><div class="price">$ 15.500</div></div>
+          <div class="item"><div class="title">Beef filet tartare on sourdough toasts</div><div class="price">$ 15.500</div></div>
+          <div class="item"><div class="title">Beet tartare with crispy quinoa</div><div class="price">$ 14.500</div></div>
+          <div class="item"><div class="title">Pumpkin cream soup with carrot and ginger</div><div class="price">$ 9.000</div></div>
+          <div class="item"><div class="title">Lentil cream soup</div><div class="price">$ 9.000</div></div>
         </div>
       </div>
 
       <div class="card">
         <h2>Main dishes + sides + sauces</h2>
         <div class="list">
-          <div class="item">
-            <div class="title">Grilled filet medallion or marbled striploin, 220 g</div>
-            <div class="price">$ 22.500</div>
-          </div>
-          <div class="item">
-            <div class="title">Pan-seared Southern hake, 230 g</div>
-            <div class="price">$ 21.500</div>
-          </div>
-          <div class="item">
-            <div class="title">Pan-seared salmon, 230 g</div>
-            <div class="price">$ 23.500</div>
-          </div>
+          <div class="item"><div class="title">Grilled filet medallion or marbled striploin, 220 g</div><div class="price">$ 22.500</div></div>
+          <div class="item"><div class="title">Pan-seared Southern hake, 230 g</div><div class="price">$ 21.500</div></div>
+          <div class="item"><div class="title">Pan-seared salmon, 230 g</div><div class="price">$ 23.500</div></div>
         </div>
 
         <hr class="sep" />
@@ -126,31 +104,26 @@
             <div class="desc">(Mote wheat in a roasted pumpkin reduction, served with grilled vegetables)</div>
             <div class="price">$ 19.000</div>
           </div>
-
           <div class="item">
             <div class="title">Shrimp risotto</div>
             <div class="desc">(Arborio rice cooked down in a shellfish broth with garlic-sautéed shrimp)</div>
             <div class="price">$ 19.000</div>
           </div>
-
           <div class="item">
             <div class="title">Salmon ravioli with lemon zest in pesto sauce</div>
             <div class="desc">(Homemade egg pasta tinted with organic Chile Chico cherries)</div>
             <div class="price">$ 17.000</div>
           </div>
-
           <div class="item">
             <div class="title">Lamb ravioli in a fine herbs sauce</div>
             <div class="desc">(Homemade egg pasta tinted with organic Chile Chico calafate berry)</div>
             <div class="price">$ 17.000</div>
           </div>
-
           <div class="item">
             <div class="title">Spinach sorrentino in pomodoro sauce with morels</div>
             <div class="desc">(Homemade egg pasta tinted with organic Chile Chico beets)</div>
             <div class="price">$ 17.000</div>
           </div>
-
           <div class="item">
             <div class="title">Fettuccine in pomodoro sauce with a touch of basil pesto</div>
             <div class="desc">(Homemade egg pasta with artisan tomato sauce)</div>
@@ -167,117 +140,53 @@
       <div class="card">
         <h2>Juices & soft drinks</h2>
         <div class="list">
-          <div class="item">
-            <div class="title">UAPA! juices — Cherry / Pear / Apple</div>
-            <div class="price">$ 4.500</div>
-          </div>
-          <div class="item">
-            <div class="title">SUR YUIS juices — Sarsaparilla / Calafate / Redcurrant / Maqui</div>
-            <div class="price">$ 4.500</div>
-          </div>
-          <div class="item">
-            <div class="title">Fresh juice — Pineapple / Raspberry / Mint & ginger lemonade</div>
-            <div class="price">$ 4.500</div>
-          </div>
-          <div class="item">
-            <div class="title">Sodas</div>
-            <div class="price">$ 3.500</div>
-          </div>
+          <div class="item"><div class="title">UAPA! juices — Cherry / Pear / Apple</div><div class="price">$ 4.500</div></div>
+          <div class="item"><div class="title">SUR YUIS juices — Sarsaparilla / Calafate / Redcurrant / Maqui</div><div class="price">$ 4.500</div></div>
+          <div class="item"><div class="title">Fresh juice — Pineapple / Raspberry / Mint & ginger lemonade</div><div class="price">$ 4.500</div></div>
+          <div class="item"><div class="title">Sodas</div><div class="price">$ 3.500</div></div>
         </div>
       </div>
 
       <div class="card">
         <h2>Beers</h2>
         <div class="list">
-          <div class="item">
-            <div class="title">GLOF — Pale Ale, craft beer from Chile Chico</div>
-            <div class="price">$ 4.500</div>
-          </div>
-          <div class="item">
-            <div class="title">CERRO COLORADO — Porter / Amber Ale, craft beer from Chile Chico</div>
-            <div class="price">$ 4.500</div>
-          </div>
-          <div class="item">
-            <div class="title">D'Olbeck — Maqui / Lager / Ale / Red IPA / Unfiltered Stout</div>
-            <div class="price">$ 4.500</div>
-          </div>
-          <div class="item">
-            <div class="title">KUNSTMANN — Alcohol-free lager</div>
-            <div class="price">$ 4.500</div>
-          </div>
+          <div class="item"><div class="title">GLOF — Pale Ale, craft beer from Chile Chico</div><div class="price">$ 4.500</div></div>
+          <div class="item"><div class="title">CERRO COLORADO — Porter / Amber Ale, craft beer from Chile Chico</div><div class="price">$ 4.500</div></div>
+          <div class="item"><div class="title">D'Olbeck — Maqui / Lager / Ale / Red IPA / Unfiltered Stout</div><div class="price">$ 4.500</div></div>
+          <div class="item"><div class="title">KUNSTMANN — Alcohol-free lager</div><div class="price">$ 4.500</div></div>
         </div>
       </div>
 
       <div class="card">
         <h2>Cocktails</h2>
         <div class="list">
-          <div class="item">
-            <div class="title">Pisco Sour — Lemon, Calafate or Corinto</div>
-            <div class="price">$ 7.000</div>
-          </div>
-          <div class="item">
-            <div class="title">Spritz — St. Germain, Ramazzotti, Aperol, Chambord</div>
-            <div class="price">$ 7.000</div>
-          </div>
-          <div class="item">
-            <div class="title">Brut sparkling wine</div>
-            <div class="price">$ 5.500</div>
-          </div>
-          <div class="item">
-            <div class="title">Jägermeister Manifest — corporate glass</div>
-            <div class="price">$ 4.500</div>
-          </div>
-          <div class="item">
-            <div class="title">Gin Kantal</div>
-            <div class="price">$ 5.000</div>
-          </div>
-          <div class="item">
-            <div class="title">Fentimans Rose or Ginger</div>
-            <div class="price">$ 4.000</div>
-          </div>
-          <div class="item">
-            <div class="title">Chivas 12-year whisky</div>
-            <div class="price">$ 12.000</div>
-          </div>
+          <div class="item"><div class="title">Pisco Sour — Lemon, Calafate or Corinto</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">Spritz — St. Germain, Ramazzotti, Aperol, Chambord</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">Brut sparkling wine</div><div class="price">$ 5.500</div></div>
+          <div class="item"><div class="title">Jägermeister Manifest — corporate glass</div><div class="price">$ 4.500</div></div>
+          <div class="item"><div class="title">Gin Kantal</div><div class="price">$ 5.000</div></div>
+          <div class="item"><div class="title">Fentimans Rose or Ginger</div><div class="price">$ 4.000</div></div>
+          <div class="item"><div class="title">Chivas 12-year whisky</div><div class="price">$ 12.000</div></div>
         </div>
 
         <hr class="sep" />
 
         <h2>Wines</h2>
         <div class="list">
-          <div class="item">
-            <div class="title">Allá Lejos (Chile Chico) — the southernmost wine in the world</div>
-            <div class="price">$ 45.000</div>
-          </div>
+          <div class="item"><div class="title">Allá Lejos (Chile Chico) — the southernmost wine in the world</div><div class="price">$ 45.000</div></div>
         </div>
       </div>
     </div>
 
-    <!-- DESSERTS AT THE END -->
     <div class="section" style="padding-top:0;">
       <div class="card">
         <h2>Desserts</h2>
         <div class="list">
-          <div class="item">
-            <div class="title">Brownie with a touch of ice cream</div>
-            <div class="price">$ 7.000</div>
-          </div>
-          <div class="item">
-            <div class="title">Apple crumble with house ice cream</div>
-            <div class="price">$ 7.000</div>
-          </div>
-          <div class="item">
-            <div class="title">Crème brûlée</div>
-            <div class="price">$ 7.000</div>
-          </div>
-          <div class="item">
-            <div class="title">Tiramisu</div>
-            <div class="price">$ 7.000</div>
-          </div>
-          <div class="item">
-            <div class="title">House cake</div>
-            <div class="price">$ 7.000</div>
-          </div>
+          <div class="item"><div class="title">Brownie with a touch of ice cream</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">Apple crumble with house ice cream</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">Crème brûlée</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">Tiramisu</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">House cake</div><div class="price">$ 7.000</div></div>
         </div>
       </div>
     </div>
@@ -291,6 +200,7 @@
   <div class="mobile-bar">
     <div class="inner">
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Book</a>
+      <a class="btn" href="/en/rooms.html">Rooms</a>
     </div>
   </div>
 </body>
