--- a/habitaciones.html
+++ b/habitaciones.html
@@ -5,22 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Habitaciones | Casona Belga</title>
   <meta name="description" content="Habitaciones, tarifas desde, políticas y consulta de disponibilidad por WhatsApp." />
-  <meta name="theme-color" content="#07070a" />
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="assets/logo_casona.png" type="image/png" />
-  <link rel="alternate" hreflang="español" href="https://www.casonabelga.cl/habitaciones.html" />
-  <link rel="alternate" hreflang="english" href="https://www.casonabelga.cl/en/rooms.html" />
-  <link rel="alternate" hreflang="x-default" href="https://www.casonabelga.cl/index.html" />
 
+  <meta name="theme-color" content="#07070a" />
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="icon" href="/assets/logo_casona.png" type="image/png" />
+
+  <link rel="canonical" href="https://www.casonabelga.cl/habitaciones.html" />
+  <link rel="alternate" hreflang="es" href="https://www.casonabelga.cl/habitaciones.html" />
+  <link rel="alternate" hreflang="en" href="https://www.casonabelga.cl/en/rooms.html" />
+  <link rel="alternate" hreflang="x-default" href="https://www.casonabelga.cl/index.html" />
 </head>
 
 <body>
   <header>
     <div class="container nav">
-      <!-- BRAND con LOGO -->
       <div class="brand brand-row">
-        <a href="index.html" class="brand-link" aria-label="Casona Belga - Inicio">
-          <img src="assets/logo_casona.png" alt="Logo Casona Belga" class="logo" />
+        <a href="/index.html" class="brand-link" aria-label="Casona Belga - Inicio">
+          <img src="/assets/logo_casona.png" alt="Logo Casona Belga" class="logo" />
           <div class="brand-text">
             <strong>Casona Belga</strong>
             <span>Hotel · Habitaciones</span>
@@ -29,16 +30,16 @@
       </div>
 
       <nav class="menu">
-        <a href="carta.html">Restaurante</a>
-        <a href="contacto.html">Contacto</a>
+        <a href="/carta.html">Restaurante</a>
+        <a href="/contacto.html">Contacto</a>
 
-        <a class="btn" href="en/rooms.html">ENGLISH</a>
+        <!-- Idioma -->
+        <a class="btn" href="/en/rooms.html">EN</a>
 
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Consultar</a>
       </nav>
     </div>
   </header>
-
 
   <main class="container section">
     <h2>Habitaciones</h2>
@@ -46,7 +47,7 @@
 
     <div class="cta-row">
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🛏️ Consultar disponibilidad</a>
-      <a class="btn" href="index.html">⬅ Volver</a>
+      <a class="btn" href="/index.html">⬅ Volver</a>
     </div>
 
     <hr class="sep" />
@@ -54,7 +55,6 @@
     <div class="grid">
       <div class="card">
         <h2>Habitación Tehuelche</h2>
-        <!-- <img src="assets/hab1.webp" alt="Habitación Tehuelche" loading="lazy" decoding="async" /> -->
         <p class="muted">Capacidad: 2–3 · Baño: Privado · Desayuno: Lun–Dom 7:30–10:00</p>
         <div class="badges">
           <span class="badge">1 cama matrimonial</span>
@@ -106,7 +106,10 @@
         <div class="policies-grid">
           <div class="item">
             <div class="title">Check-in / Check-out</div>
-            <div class="desc">Check-in desde las <strong>15:00</strong> · Check-out hasta las <strong>11:00</strong>. Si almuerza en el restaurante de la Casona Belga, tiene como beneficio un Late Checkout (14:00) SUJETO A DISPONIBILIDAD.</div>
+            <div class="desc">
+              Check-in desde las <strong>15:00</strong> · Check-out hasta las <strong>11:00</strong>.
+              Si almuerza en el restaurante de la Casona Belga, tiene como beneficio un Late Checkout (14:00) <strong>sujeto a disponibilidad</strong>.
+            </div>
           </div>
 
           <div class="item">
@@ -139,7 +142,7 @@
   <div class="mobile-bar">
     <div class="inner">
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Consultar</a>
-      <a class="btn" href="contacto.html">Contacto</a>
+      <a class="btn" href="/contacto.html">Contacto</a>
     </div>
   </div>
 </body>
