--- a/en/rooms.html
+++ b/en/rooms.html
@@ -7,11 +7,10 @@
   <meta name="description" content="Rooms, rates from, policies, and availability inquiries via WhatsApp." />
   <meta name="theme-color" content="#07070a" />
 
-  <!-- IMPORTANT: absolute paths because this file is under /en/ -->
   <link rel="stylesheet" href="/style.css" />
   <link rel="icon" href="/assets/logo_casona.png" type="image/png" />
 
-  <!-- hreflang must use language codes -->
+  <link rel="canonical" href="https://www.casonabelga.cl/en/rooms.html" />
   <link rel="alternate" hreflang="en" href="https://www.casonabelga.cl/en/rooms.html" />
   <link rel="alternate" hreflang="es" href="https://www.casonabelga.cl/habitaciones.html" />
   <link rel="alternate" hreflang="x-default" href="https://www.casonabelga.cl/index.html" />
@@ -20,7 +19,6 @@
 <body>
   <header>
     <div class="container nav">
-      <!-- BRAND with LOGO -->
       <div class="brand brand-row">
         <a href="/en/index.html" class="brand-link" aria-label="Casona Belga - Home">
           <img src="/assets/logo_casona.png" alt="Casona Belga logo" class="logo" />
@@ -35,14 +33,12 @@
         <a href="/en/menu.html">Restaurant</a>
         <a href="/en/contact.html">Contact</a>
 
-        <!-- Language switch -->
         <a class="btn" href="/habitaciones.html">ES</a>
 
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Inquire</a>
       </nav>
     </div>
   </header>
-
 
   <main class="container section">
     <h2>Rooms</h2>
@@ -52,7 +48,7 @@
 
     <div class="cta-row">
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🛏️ Check availability</a>
-      <a class="btn" href="index.html">⬅ Back</a>
+      <a class="btn" href="/en/index.html">⬅ Back</a>
     </div>
 
     <hr class="sep" />
@@ -60,7 +56,6 @@
     <div class="grid">
       <div class="card">
         <h2>Tehuelche Room</h2>
-        <!-- <img src="assets/hab1.webp" alt="Tehuelche Room" loading="lazy" decoding="async" /> -->
         <p class="muted">Capacity: 2–3 · Bathroom: Private · Breakfast: Mon–Sun 7:30–10:00</p>
         <div class="badges">
           <span class="badge">1 queen bed</span>
@@ -148,7 +143,7 @@
   <div class="mobile-bar">
     <div class="inner">
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Inquire</a>
-      <a class="btn" href="contacto.html">Contact</a>
+      <a class="btn" href="/en/contact.html">Contact</a>
     </div>
   </div>
 </body>
